k8s/production/services/alias-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-main
  namespace: database
spec:
  type: ExternalName
  externalName: mysql-main-haproxy.database.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-main
  namespace: database
spec:
  type: ExternalName
  externalName: postgres-main-pgbouncer.database.svc.cluster.local
