k8s/production/services/monitoring-internal-nodeport.yaml
# NodePort exposure of prod Prometheus + Loki for the management-cluster
# Grafana (centralized dashboards). Reached from mgmt nodes via SG rule:
# prod node SG sg-002a0ca20776af7f4 allows 30090/30310 from mgmt SG
# sg-07dd21f853f46a3de. Mgmt side bridges via Service+Endpoints
# prometheus-prod / loki-prod in ns monitoring (static prod node IPs,
# update endpoints when prod nodes are replaced).
apiVersion: v1
kind: Service
metadata:
  name: prometheus-internal-nodeport
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: prometheus
    operator.prometheus.io/name: kps-kube-prometheus-stack
  ports:
    - name: http-web
      port: 9090
      targetPort: 9090
      nodePort: 30090
---
apiVersion: v1
kind: Service
metadata:
  name: loki-gateway-internal-nodeport
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: loki
  ports:
    - name: http
      port: 80
      targetPort: http-metrics
      nodePort: 30310
